<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f7fb"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mock "
            android:textColor="#8B5CF6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="University"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingTop="16dp">

        <FrameLayout
            android:id="@+id/tabAll"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-198dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="-200dp"
                android:layout_marginBottom="-110dp"
                android:src="@drawable/bg_tab_selector_all" />

            <TextView
                android:id="@+id/tabAllText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="All"
                android:textColor="@drawable/tab_text_color"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/tabInProgress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-25dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="-60dp"
                android:layout_marginBottom="-110dp"
                android:adjustViewBounds="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_tab_selector_in_progress" />

            <TextView
                android:id="@+id/tabInProgressText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="In Progress"
                android:textColor="@drawable/tab_text_color"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/tabCompleted"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-25dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="-60dp"
                android:layout_marginBottom="-110dp"
                android:adjustViewBounds="true"
                android:clipChildren="false"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_tab_selector_in_progress" />

            <TextView
                android:id="@+id/tabCompletedText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="Completed"
                android:textColor="@drawable/tab_text_color"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"/>
        </FrameLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/testsRecyclerViewLearning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="30dp"
        android:paddingTop="10dp"
        android:clipChildren="false"
        tools:listitem="@layout/item_test"/>
    <include layout="@layout/bottom_nav" />
</LinearLayout>