...
        android:id="@+id/contentScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/startTestContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
...
